# ml_experiments

./: .gitignore  Cargo.toml  README.md  Untitled.ipynb
crates/morphological_tokenization/: Cargo.toml  words
crates/morphological_tokenization/src/: init.rs  lib.rs  main.rs
crates/top_word_embedding/: Cargo.toml  sample.txt
crates/top_word_embedding/src/: lib.rs  main.rs
crates/top_word_embedding/words/: linguistics.md  nouns.txt  sources.txt  verbs.txt
crates/wordsitter/: Cargo.toml
crates/wordsitter/src/: lib.rs
journal/: 10feb2024.md  14mar2024.md  16mar2024.md  1apr2024.md  24feb2024.md  5feb2024.md
julia/: bruh.jl  flux_former.jl  graph_solve.jl
src/: decoder.rs  experiment_1.rs  experiment_2.rs  experiment_3.rs  lib.rs  main.rs  main_old.rs
src/experiment_2/: token_output_stream.rs
