[package]
name = "ml_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
#candle-core = { version = "0.3.3", features = ["cuda"] }
#candle-nn = "0.3.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2"}#, features = ["cuda"] }
#candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
dfdx = { version = "0.13.0", features = ["cuda"] }
#candle-transformers = "0.4.1"
hf-hub = "0.3.2"
polars = "0.38.1"
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
serde_json = "1.0.114"
tokenizers = "0.15.2"

[workspace]
members = ["crates/*"]
