[package]
name = "ml_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hugging face
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
hf-hub = "0.3.2"
tokenizers = "0.15.2"

# Misc
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
# dfdx = { version = "0.13.0", features = ["cuda"] } # I want to use this in the future, instead of candle
anyhow = "1.0.79"
polars = "0.38.1"
serde_json = "1.0.114"

[workspace]
members = ["crates/*"]
